--- a/style.scss
+++ b/style.scss
@@ -1,19 +1,17 @@
-body {
+body{ 
   display: flex;
   flex-direction: row;
-  background: linear-gradient(90deg, rgb(58, 202, 2) 0%, rgb(222, 246, 49) 52%);
+  background: linear-gradient(90deg, rgba(58,202,2,1) 0%, rgba(222,246,49,1) 52%);
   margin: 0;
   overflow: hidden;
 }
-
-.loginbox {
+.loginbox{
   display: block;
   width: 50%;
   height: 100vh;
-  border: 1px solid red;
+  border:1px solid red
 }
-
-.formbox {
+.formbox{
   background-color: white;
   border-radius: 15px;
-}/*# sourceMappingURL=style.css.map */
+}
