--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,9 @@
+$primarycolor:rgba(58,202,2,1);
+$secondarycolor:rgba(222,246,49,1);
 body{ 
   display: flex;
   flex-direction: row;
-  background: linear-gradient(90deg, rgba(58,202,2,1) 0%, rgba(222,246,49,1) 52%);
+  background: linear-gradient(90deg, $primarycolor 0%, $secondarycolor 52%);
   margin: 0;
   overflow: hidden;
 }
@@ -9,9 +11,101 @@ body{
   display: block;
   width: 50%;
   height: 100vh;
-  border:1px solid red
+ 
+}
+
+@media screen and (max-width: 900px) {
+  .formbox{
+    display: block;
+    width: 100%;
+    height: 100vh;
+  }
+  .leftbox{
+    width: 0;
+  }
 }
 .formbox{
   background-color: white;
-  border-radius: 15px;
+  border-radius: 66px;
+}
+.circle{
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  background-color: white;
+}
+.c1{
+  height: 9rem;
+  width: 11rem;
+  top: 24%;
+  left: -4%;
+}
+.c2{
+  height: 9rem;
+  width: 11rem;
+  top: 29%;
+  left: 9%;
+}
+.c3{
+  height: 10rem;
+  width: 13rem;
+  top: 23%;
+  left: 22%;
+}
+.c4{
+  height: 11rem;
+  width: 14rem;
+  top: 12%;
+  left: 30%;
+}
+.c5{
+  height: 8rem;
+  width: 11rem;
+  top: 6%;
+  left: 43%;
+}
+.c6{
+  height: 11rem;
+  width: 13rem;
+  top: 52%;
+  left: -4%;
+}
+.c7{
+  height: 10rem;
+  width: 10rem;
+  top: 50%;
+  left: 12%;
+}
+.c8{
+  height: 10rem;
+  width: 12rem;
+  top: 52%;
+  left: 22%;
+}
+.c9{
+  height: 11rem;
+  width: 10rem;
+  top: 59%;
+  left: 34%;
+}
+.c10{
+  height: 14rem;
+  width: 15rem;
+  top: 59%;
+  left: 43%;
+}
+.c11{
+  height: 31rem;
+  width: 33rem;
+  top: 13%;
+  left: 34%;
+}
+.square{
+  position: absolute;
+  height: 12.5rem;
+  width: 50%;
+  top: 16rem;
+
+  background-color: white;
 }
