--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   background: linear-gradient(90deg, rgb(58, 202, 2) 0%, rgb(222, 246, 49) 52%);
   margin: 0;
   overflow: hidden;
+  font-family: Helvetica;
 }
 
 .loginbox {
@@ -12,14 +13,46 @@ body {
   height: 100vh;
 }
 
+.formbox {
+  display: flex;
+  z-index: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.lf {
+  display: flex;
+  box-shadow: 0px 0px 5px #959595;
+  height: 3rem;
+  width: 62%;
+  border-radius: 26px;
+  margin-bottom: 2rem;
+  align-items: center;
+}
+
+.submit {
+  display: block;
+  width: 7rem;
+  border: 0;
+  color: rgb(255, 255, 255);
+  font-size: large;
+  background: #0f9d58;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 900px) {
   .formbox {
-    display: block;
     width: 100%;
     height: 100vh;
   }
   .leftbox {
     width: 0;
+  }
+}
+@media screen and (max-width: 350px) {
+  .forgotpswd {
+    flex-direction: column !important;
   }
 }
 .formbox {
@@ -36,78 +69,78 @@ body {
 }
 
 .c1 {
-  height: 9rem;
-  width: 11rem;
+  height: 20%;
+  width: 17%;
   top: 24%;
   left: -4%;
 }
 
 .c2 {
   height: 9rem;
-  width: 11rem;
+  width: 18%;
   top: 29%;
   left: 9%;
 }
 
 .c3 {
   height: 10rem;
-  width: 13rem;
+  width: 20%;
   top: 23%;
   left: 22%;
 }
 
 .c4 {
   height: 11rem;
-  width: 14rem;
+  width: 20%;
   top: 12%;
   left: 30%;
 }
 
 .c5 {
   height: 8rem;
-  width: 11rem;
+  width: 18%;
   top: 6%;
   left: 43%;
 }
 
 .c6 {
   height: 11rem;
-  width: 13rem;
+  width: 20%;
   top: 52%;
   left: -4%;
 }
 
 .c7 {
-  height: 10rem;
-  width: 10rem;
+  height: 29%;
+  width: 19%;
   top: 50%;
-  left: 12%;
+  left: 8%;
 }
 
 .c8 {
   height: 10rem;
-  width: 12rem;
+  width: 15%;
   top: 52%;
   left: 22%;
 }
 
 .c9 {
-  height: 11rem;
-  width: 10rem;
+  height: 24%;
+  width: 15%;
   top: 59%;
   left: 34%;
 }
 
 .c10 {
   height: 14rem;
-  width: 15rem;
+  width: 20%;
   top: 59%;
   left: 43%;
 }
 
 .c11 {
-  height: 31rem;
-  width: 33rem;
+  height: 52%;
+  width: 35%;
   top: 13%;
   left: 34%;
 }
@@ -116,6 +149,55 @@ body {
   position: absolute;
   height: 12.5rem;
   width: 50%;
-  top: 16rem;
+  top: 36%;
   background-color: white;
+}
+
+.icon {
+  height: 32px;
+}
+
+.lfitem {
+  width: 100%;
+  margin-right: 1.5rem;
+  height: 80%;
+}
+
+.usblock {
+  height: 2rem;
+  width: 55px;
+  padding-left: 10px;
+}
+
+input {
+  border: none;
+  height: 87%;
+}
+
+input:focus-visible {
+  outline: none;
+}
+
+.password {
+  margin-bottom: 0;
+}
+
+.forgotpswd {
+  display: flex;
+  flex-direction: row;
+  width: 58%;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.icon.hide {
+  margin-right: 15px;
+  margin-top: 4px;
+  height: 25px;
+  width: 25px;
+}
+
+.submit:hover {
+  box-shadow: 0px 0px 5px 2px #5d9477;
+  background: #03914c;
 }/*# sourceMappingURL=style.css.map */
