--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ body {
   width: 5rem;
   border-radius: 50%;
   background-color: white;
+  -webkit-animation: leftright 5s infinite;
+          animation: leftright 5s infinite;
 }
 
 .c1 {
@@ -200,4 +202,28 @@ input:focus-visible {
 .submit:hover {
   box-shadow: 0px 0px 5px 2px #5d9477;
   background: #03914c;
+}
+
+@-webkit-keyframes leftright {
+  0% {
+    transform: translateX(-0.5rem);
+  }
+  50% {
+    transform: translateX(0rem);
+  }
+  100% {
+    transform: translateX(-0.5rem);
+  }
+}
+
+@keyframes leftright {
+  0% {
+    transform: translateX(-0.5rem);
+  }
+  50% {
+    transform: translateX(0rem);
+  }
+  100% {
+    transform: translateX(-0.5rem);
+  }
 }/*# sourceMappingURL=style.css.map */
